--- a/MSSQLRegExUtils/MSSQLRegExUtils.csproj
+++ b/MSSQLRegExUtils/MSSQLRegExUtils.csproj
@@ -5,9 +5,9 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{310B0226-0C92-414E-A62B-E8E6D6E7D0AE}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>RegExLike</RootNamespace>
-    <AssemblyName>RegExLike</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>MSSQLRegExUtils</RootNamespace>
+    <AssemblyName>MSSQLRegExUtils</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="SQLRegExHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
